add some tests for json Differ