@@ -77,18 +77,11 @@ public class Differ {
         if (!filePath.startsWith("/home")) {
             relativeanabspathPath = "src/main/resources/" + filePath;
         }
-        return Files.readString(Paths.get(relativeanabspathPath).toAbsolutePath().normalize());
-    }
-
-    public static Path pathToFullPath(Path path, String currentPath) {
-        String fullPath = path.toString();
-        if (!path.startsWith("/home")) {
-            fullPath = currentPath + "/src/main/resources/" + path;
-            if (!Path.of(fullPath).toFile().exists()) {
-                fullPath = currentPath + "/src/test/resources/" + path;
-            }
+        if (!Path.of(relativeanabspathPath).toFile().exists())
+        {
+            relativeanabspathPath = "src/test/resources/" + filePath;
         }
-        return Path.of(fullPath);
+        return Files.readString(Paths.get(relativeanabspathPath).toAbsolutePath().normalize());
     }
 
 
